@@ -13,6 +13,7 @@ import com.chenlb.mmseg4j.Chunk;
 import com.chenlb.mmseg4j.ComplexSeg;
 import com.chenlb.mmseg4j.Dictionary;
 import com.chenlb.mmseg4j.MMSeg;
+import com.chenlb.mmseg4j.MaxWordSeg;
 import com.chenlb.mmseg4j.Seg;
 import com.chenlb.mmseg4j.SimpleSeg;
 import com.chenlb.mmseg4j.Chunk.Word;
@@ -21,6 +22,7 @@ public class Performance {
 
 	/**
 	 * -Dmode=simple, default is complex
+	 * -Dfile.encoding=UTF-8 or other
 	 * @param args args[0] txt path
 	 * @author chenlb 2009-3-28 下午02:19:52
 	 * @throws IOException 
@@ -28,7 +30,8 @@ public class Performance {
 	public static void main(String[] args) throws IOException {
 		if(args.length < 1) {
 			System.out.println("Usage:");
-			System.out.println("\t-Dmode=simple, defalut is complex");
+			System.out.println("\t-Dmode=simple, defalut is complex, also max-word");
+			System.out.println("\t-Dfile.encoding=UTF-8 or other, *.txt file encode");
 			System.out.println("\tPerformance <txt path> - is a directory that contain *.txt");
 			return;
 		}
@@ -37,6 +40,8 @@ public class Performance {
 		Dictionary dic = new Dictionary();
 		if("simple".equals(mode)) {
 			seg = new SimpleSeg(dic);
+		} else if("max-word".equals(mode)) {
+			seg = new MaxWordSeg(dic);
 		} else {
 			seg = new ComplexSeg(dic);
 		}
@@ -51,7 +56,7 @@ public class Performance {
 		});
 		long time = 0;
 		for(File txt : txts) {
-			MMSeg mmSeg = new MMSeg(new InputStreamReader(new FileInputStream(txt), "GBK"), seg);
+			MMSeg mmSeg = new MMSeg(new InputStreamReader(new FileInputStream(txt)), seg);
 			Chunk chunk = null;
 			OutputStreamWriter osw = new OutputStreamWriter(new FileOutputStream(new File(txt.getAbsoluteFile()+"."+mode+".word")));
 			BufferedWriter bw = new BufferedWriter(osw);
@@ -60,7 +65,7 @@ public class Performance {
 				//int offset = chunk.getStartOffset();
 				for(Word word : chunk.getWords()) {
 					if(word != null) {
-						bw.append(new String(word.getWord())).append("\r\n");
+						bw.append(word.getString()).append("\r\n");
 						//offset += word.length;
 						
 					}
