@@ -35,7 +35,7 @@ public class ComplexSeg extends Seg{
 		int[] tailLen = new int[3];	//记录词的尾长
 		int[] maxTailLen = new int[3];	//记录词尾部允许的长度
 		CharNode[] cns = new CharNode[3];
-		char[][] cks = new char[3][];
+
 		int[] offsets = new int[3];	//每个词在sen的开始位置
 		mmr.reset();
 		if(!sen.isFinish()) {	//sen.getOffset() < chs.length
@@ -53,7 +53,7 @@ public class ComplexSeg extends Seg{
 					continue;
 				}
 				tailLen[0] = aLen;
-				int idx = search(cns[0], chs, offsets[0], tailLen[0], cks, 0);
+				int idx = search(cns[0], chs, offsets[0], tailLen[0]);
 				if(idx > -1 || tailLen[0]==0) {	//idx > -1 找到, tailLen[0]==0单个字
 					offsets[1] = offsets[0]+1+tailLen[0];	//第二个词的开始位置
 					for(int bLen : getLens(cns, 1, chs, offsets[1], maxTailLen, 1)) {
@@ -61,7 +61,7 @@ public class ComplexSeg extends Seg{
 							continue;
 						}
 						tailLen[1] = bLen;
-						idx = search(cns[1], chs, offsets[1], tailLen[1], cks, 1);
+						idx = search(cns[1], chs, offsets[1], tailLen[1]);
 						if(idx > -1 || tailLen[1]==0) {
 							offsets[2] = offsets[1]+1+tailLen[1];
 							for(int cLen : getLens(cns, 2, chs, offsets[2], maxTailLen, 2)) {
@@ -69,7 +69,7 @@ public class ComplexSeg extends Seg{
 									continue;
 								}
 								tailLen[2] = cLen;
-								idx = search(cns[2], chs, offsets[2], tailLen[2], cks, 2);
+								idx = search(cns[2], chs, offsets[2], tailLen[2]);
 								if(idx > -1 || tailLen[2]==0) {	//有chunk
 									int sumChunkLen = 0;
 									for(int i=0; i<3; i++) {
@@ -78,13 +78,13 @@ public class ComplexSeg extends Seg{
 									Chunk ck = null;
 									if(sumChunkLen >= maxLen) {
 										maxLen = sumChunkLen;	//下一个chunk块的开始位置增量
-										ck = createChunk(sen, chs, tailLen, offsets, cns, cks);
+										ck = createChunk(sen, chs, tailLen, offsets, cns);
 										mmr.addChunk(ck);
 										
 									}
 									if(showChunk) {
 										if(ck == null) {
-											ck = createChunk(sen, chs, tailLen, offsets, cns, cks);
+											ck = createChunk(sen, chs, tailLen, offsets, cns);
 											mmr.addChunk(ck);
 										}
 										System.out.println(ck);
@@ -121,15 +121,13 @@ public class ComplexSeg extends Seg{
 		return null;
 	}
 
-	private Chunk createChunk(Sentence sen, char[] chs, int[] tailLen, int[] offsets, CharNode[] cns, char[][] cks) {
+	private Chunk createChunk(Sentence sen, char[] chs, int[] tailLen, int[] offsets, CharNode[] cns) {
 		Chunk ck = new Chunk();
-		ck.setStartOffset(sen.getStartOffset()+offsets[0]);
+		
 		for(int i=0; i<3; i++) {
 
 			if(offsets[i] < chs.length) {
-				/*ck.words[i] = new char[tailLen[i]+1];
-				System.arraycopy(chs, offsets[i], ck.words[i], 0, tailLen[i]+1);*/
-				ck.words[i] = new Word(cks[i], sen.getStartOffset()+offsets[i]);
+				ck.words[i] = new Word(chs, sen.getStartOffset(), offsets[i], tailLen[i]+1);
 				if(tailLen[i] == 0) {	//单字的要取得"字频计算出自由度"
 					CharNode cn = cns[i];	//dic.head(chs[offsets[i]]);
 					if(cn !=null) {
