@@ -21,12 +21,11 @@ public class SimpleSeg extends Seg{
 			int maxLen = 0;
 			int[] maxAvailableLen = {0};
 			CharNode[] cns = new CharNode[1];
-			char[][] cks = new char[1][];
 			for(int len : getLens(cns, 0, chs, offset, maxAvailableLen, 0)) {
 				if(len > maxAvailableLen[0]) {	//len不合格
 					continue;
 				}
-				int idx = search(cns[0], chs, offset, len, cks, 0);
+				int idx = search(cns[0], chs, offset, len);
 				if(idx > -1) {
 					maxLen = len;
 					break;
@@ -34,13 +33,9 @@ public class SimpleSeg extends Seg{
 				
 			}
 
-			//len == 0 说明没找到, 但还要单个输出
-			/*char[] ck = new char[maxLen+1];
-			System.arraycopy(chs, offset, ck, 0, maxLen+1);*/
-			chunk.words[k] = new Word(cks[0], sen.getStartOffset()+offset);	//ck;
-			if(k == 0) {
-				chunk.setStartOffset(sen.getStartOffset()+offset);
-			}
+			
+			chunk.words[k] = new Word(chs, sen.getStartOffset(), offset, maxLen+1);
+			
 			offset += maxLen + 1;
 			sen.setOffset(offset);
 		}
