@@ -1,3 +1,6 @@
+---------1.6.1-----------
+1.要比较的词不从 char[] sen 里复制,直接与词库结构比较, 性能提升10% 
+2.analyzer 添加 LowerCaseFilter
 ---------1.6-------------
 1.实现多分词
 2.允许多个词库文件
